--- a/src/styles/_theme-colors.scss
+++ b/src/styles/_theme-colors.scss
@@ -4,10 +4,9 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #6750A4, secondary: #958DA4, tertiary: #B58392, neutral: #938F94
+// Note: Color palettes are generated from primary: #6750a4
 $_palettes: (
-  primary: (
-    0: #000000,
+  primary: (0: #000000,
     10: #22005d,
     20: #381e72,
     25: #432b7e,
@@ -24,72 +23,68 @@ $_palettes: (
     99: #fffbff,
     100: #ffffff,
   ),
-  secondary: (
-    0: #000000,
-    10: #1e192b,
-    20: #332d40,
-    25: #3e384c,
-    30: #4a4458,
-    35: #564f64,
-    40: #625b70,
-    50: #7b748a,
-    60: #958da4,
-    70: #b0a7bf,
-    80: #ccc2db,
-    90: #e8def8,
-    95: #f6edff,
-    98: #fef7ff,
+  secondary: (0: #000000,
+    10: #1f1635,
+    20: #342b4b,
+    25: #3f3657,
+    30: #4b4263,
+    35: #574d6f,
+    40: #63597c,
+    50: #7c7296,
+    60: #968bb1,
+    70: #b1a5cc,
+    80: #cdc0e9,
+    90: #e9ddff,
+    95: #f6eeff,
+    98: #fdf7ff,
     99: #fffbff,
     100: #ffffff,
   ),
-  tertiary: (
-    0: #000000,
-    10: #31101d,
-    20: #4a2532,
-    25: #56303d,
-    30: #633b48,
-    35: #704654,
-    40: #7e5260,
-    50: #996a78,
-    60: #b58392,
-    70: #d29dac,
-    80: #efb8c8,
-    90: #ffd9e3,
-    95: #ffecf0,
+  tertiary: (0: #000000,
+    10: #3c002b,
+    20: #5a1243,
+    25: #681e4f,
+    30: #752a5b,
+    35: #843667,
+    40: #924274,
+    50: #af5a8e,
+    60: #cd73a8,
+    70: #eb8dc4,
+    80: #ffaedb,
+    90: #ffd8ea,
+    95: #ffecf3,
     98: #fff8f8,
     99: #fffbff,
     100: #ffffff,
   ),
-  neutral: (
-    0: #000000,
-    10: #1d1b1f,
-    20: #323034,
-    25: #3d3a3f,
-    30: #48464a,
-    35: #545156,
-    40: #605d62,
-    50: #79767b,
-    60: #938f94,
-    70: #aeaaaf,
-    80: #cac5ca,
-    90: #e6e1e6,
-    95: #f5eff4,
-    98: #fdf8fd,
+  neutral: (0: #000000,
+    10: #1d1b20,
+    20: #322f35,
+    25: #3d3a41,
+    30: #48464c,
+    35: #545158,
+    40: #605d64,
+    50: #79767d,
+    60: #938f96,
+    70: #aea9b1,
+    80: #cac5cc,
+    90: #e6e0e9,
+    95: #f5eff7,
+    98: #fdf7ff,
     99: #fffbff,
     100: #ffffff,
-    4: #0f0e11,
-    6: #141316,
-    12: #211f23,
-    17: #2b292d,
-    22: #363438,
-    24: #3b383d,
-    87: #ded8de,
-    92: #ece6ec,
-    94: #f2ecf2,
-    96: #f8f2f7,
+    4: #0f0d13,
+    6: #141218,
+    12: #211f24,
+    17: #2b292f,
+    22: #36343a,
+    24: #3b383e,
+    87: #ded8e0,
+    92: #ece6ee,
+    94: #f2ecf4,
+    96: #f8f2fa,
   ),
-  neutral-variant: (
-    0: #000000,
+  neutral-variant: (0: #000000,
     10: #1d1a24,
     20: #322f3a,
     25: #3d3a45,
@@ -106,8 +101,7 @@ $_palettes: (
     99: #fffbff,
     100: #ffffff,
   ),
-  error: (
-    0: #000000,
+  error: (0: #000000,
     10: #410002,
     20: #690005,
     25: #7e0007,
@@ -129,76 +123,9 @@ $_palettes: (
 $_rest: (
   secondary: map.get($_palettes, secondary),
   neutral: map.get($_palettes, neutral),
-  neutral-variant: map.get($_palettes,  neutral-variant),
+  neutral-variant: map.get($_palettes, neutral-variant),
   error: map.get($_palettes, error),
 );
 
 $primary-palette: map.merge(map.get($_palettes, primary), $_rest);
 $tertiary-palette: map.merge(map.get($_palettes, tertiary), $_rest);
-
-@function _high-contrast-value($light, $dark, $theme-type) {
-  @if ($theme-type == light) {
-    @return $light;
-  }
-  @if ($theme-type == dark) {
-    @return $dark;
-  }
-  @if ($theme-type == color-scheme) {
-    @return light-dark(#{$light}, #{$dark});
-  }
-  
-  @error 'Unknown theme-type #{$theme-type}. Expected light, dark, or color-scheme';
-}
-
-@mixin high-contrast-overrides($theme-type) {
-  @include mat.theme-overrides((
-    primary: _high-contrast-value(#33196e, #f5edff, $theme-type),
-    on-primary: _high-contrast-value(#ffffff, #000000, $theme-type),
-    primary-container: _high-contrast-value(#513a8d, #ccb8ff, $theme-type),
-    on-primary-container: _high-contrast-value(#ffffff, #0f0033, $theme-type),
-    inverse-primary: _high-contrast-value(#cfbcff, #50398b, $theme-type),
-    primary-fixed: _high-contrast-value(#513a8d, #e9ddff, $theme-type),
-    primary-fixed-dim: _high-contrast-value(#3a2174, #cfbcff, $theme-type),
-    on-primary-fixed: _high-contrast-value(#ffffff, #000000, $theme-type),
-    on-primary-fixed-variant: _high-contrast-value(#ffffff, #160042, $theme-type),
-    secondary: _high-contrast-value(#2f293c, #f5edff, $theme-type),
-    on-secondary: _high-contrast-value(#ffffff, #000000, $theme-type),
-    secondary-container: _high-contrast-value(#4c465a, #c8bfd7, $theme-type),
-    on-secondary-container: _high-contrast-value(#ffffff, #0d0819, $theme-type),
-    secondary-fixed: _high-contrast-value(#4c465a, #e8def8, $theme-type),
-    secondary-fixed-dim: _high-contrast-value(#353043, #ccc2db, $theme-type),
-    on-secondary-fixed: _high-contrast-value(#ffffff, #000000, $theme-type),
-    on-secondary-fixed-variant: _high-contrast-value(#ffffff, #130e20, $theme-type),
-    tertiary: _high-contrast-value(#45212d, #ffebef, $theme-type),
-    on-tertiary: _high-contrast-value(#ffffff, #000000, $theme-type),
-    tertiary-container: _high-contrast-value(#663d4b, #ebb4c4, $theme-type),
-    on-tertiary-container: _high-contrast-value(#ffffff, #1d020c, $theme-type),
-    tertiary-fixed: _high-contrast-value(#663d4b, #ffd9e3, $theme-type),
-    tertiary-fixed-dim: _high-contrast-value(#4c2734, #efb8c8, $theme-type),
-    on-tertiary-fixed: _high-contrast-value(#ffffff, #000000, $theme-type),
-    on-tertiary-fixed-variant: _high-contrast-value(#ffffff, #240612, $theme-type),
-    background: _high-contrast-value(#fdf8fd, #141316, $theme-type),
-    on-background: _high-contrast-value(#1d1b1f, #e6e1e6, $theme-type),
-    surface: _high-contrast-value(#fdf8fd, #141316, $theme-type),
-    surface-dim: _high-contrast-value(#bcb7bc, #141316, $theme-type),
-    surface-bright: _high-contrast-value(#fdf8fd, #524f54, $theme-type),
-    surface-container-lowest: _high-contrast-value(#ffffff, #000000, $theme-type),
-    surface-container: _high-contrast-value(#e6e1e6, #323034, $theme-type),
-    surface-container-high: _high-contrast-value(#d8d3d8, #3d3a3f, $theme-type),
-    surface-container-highest: _high-contrast-value(#cac5ca, #48464a, $theme-type),
-    on-surface: _high-contrast-value(#000000, #ffffff, $theme-type),
-    shadow: _high-contrast-value(#000000, #000000, $theme-type),
-    scrim: _high-contrast-value(#000000, #000000, $theme-type),
-    surface-tint: _high-contrast-value(#6750a4, #cfbcff, $theme-type),
-    inverse-surface: _high-contrast-value(#323034, #e6e1e6, $theme-type),
-    inverse-on-surface: _high-contrast-value(#ffffff, #000000, $theme-type),
-    outline: _high-contrast-value(#2e2a35, #f5edfc, $theme-type),
-    outline-variant: _high-contrast-value(#4b4753, #c7c0ce, $theme-type),
-    error: _high-contrast-value(#600004, #ffece9, $theme-type),
-    on-error: _high-contrast-value(#ffffff, #000000, $theme-type),
-    error-container: _high-contrast-value(#98000a, #ffaea4, $theme-type),
-    on-error-container: _high-contrast-value(#ffffff, #220001, $theme-type),
-    surface-variant: _high-contrast-value(#e7e0ee, #494551, $theme-type),
-    on-surface-variant: _high-contrast-value(#000000, #ffffff, $theme-type),
-  ))
- }
