--- a/src/app/components/custom-select/custom-select.component.scss
+++ b/src/app/components/custom-select/custom-select.component.scss
@@ -49,3 +49,12 @@
 .option mat-icon {
     margin-right: 10px;
 }
+
+/* Doesn't works, elements stay above shadow */
+.shadow-top {
+    box-shadow: inset 0 10px 8px -8px rgb(0, 0, 0)
+}
+
+.shadow-bottom {
+    box-shadow: inset 2px -20px 8px -8px rgb(0, 0, 0)
+}
