--- a/src/app/components/custom-select/custom-select.component.html
+++ b/src/app/components/custom-select/custom-select.component.html
@@ -1,6 +1,6 @@
-<div class="relative inline-block w-full" (click)="toggleDropdown()">
+<div class="relative inline-block w-full" (click)="toggleDropdown()" role="combobox" aria-haspopup="listbox">
     <!-- Trigger -->
-    <div matRipple
+    <div matRipple tabindex="0" aria-controls="options-list"
         class="flex items-center justify-between bg-secondary-container border-none text-on-secondary-container text-sm rounded-full px-4 py-2 cursor-pointer">
         <!-- Trigger Content -->
         <ng-container *ngIf="selectedOption; else placeholder">
@@ -15,7 +15,7 @@
         <mat-icon class="ml-2">arrow_drop_down</mat-icon>
     </div>
     <!-- Dropdown -->
-    <div #dropdown *ngIf="dropdownOpen"
+    <ul #dropdown *ngIf="dropdownOpen" id="options-list" role="listbox"
         class="absolute mt-2 w-full bg-surface-container border border-none rounded-lg overflow-hidden shadow-lg z-10 max-h-60 overflow-y-auto"
         (scroll)="onDropdownScroll($event)">
         <!-- Dropdown options -->
@@ -24,15 +24,17 @@
             class="sticky top-0 left-0 w-full h-8 pointer-events-none select-none bg-gradient-to-b from-surface-container to-transparent z-20">
         </div>
         }
-        <div matRipple *ngFor="let option of options" (click)="selectOption(option)"
-            class="flex items-center space-x-2 px-4 py-2 hover:bg-secondary-container cursor-pointer">
+        <li matRipple *ngFor="let option of options; let i = index" (click)="selectOption(option)" role="option"
+            [attr.aria-selected]="highlightedIndex === i" [ngClass]="{
+                'bg-secondary-container': highlightedIndex === i,
+            }" class="flex items-center space-x-2 px-4 py-2 hover:bg-secondary-container cursor-pointer">
             <mat-icon inline>{{ option.icon }}</mat-icon>
             <span>{{ option.label }}</span>
-        </div>
+        </li>
         @if (showBottomShadow) {
         <div
             class="sticky bottom-0 left-0 w-full h-8 pointer-events-none select-none bg-gradient-to-t from-surface-container to-transparent z-20">
         </div>
         }
-    </div>
+    </ul>
 </div>
