--- a/src/app/components/custom-select/custom-select.component.html
+++ b/src/app/components/custom-select/custom-select.component.html
@@ -16,7 +16,8 @@
     </div>
     <!-- Dropdown -->
     <ul #dropdown *ngIf="dropdownOpen" id="options-list" role="listbox"
-        class="absolute mt-2 w-full bg-surface-container border border-none rounded-lg overflow-hidden shadow-lg z-10 max-h-60 overflow-y-auto"
+        [attr.data-state]="dropdownOpen ? 'open' : 'closed'" [attr.data-side]="dropdownSide"
+        class="absolute mt-2 w-full bg-surface-container border border-none rounded-lg overflow-hidden shadow-lg z-10 max-h-60 overflow-y-auto data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
         (scroll)="onDropdownScroll($event)">
         <!-- Dropdown options -->
         @if (showTopShadow) {
