--- a/src/app/published/published.component.html
+++ b/src/app/published/published.component.html
@@ -1,3 +1,17 @@
-<main class="min-h-screen">
-    <p>published works!</p>
+<main class="flex flex-col items-start justify-start w-full min-h-screen px-24 pt-9 pb-14 gap-16">
+    <div>
+
+    </div>
+    <div>
+        <div class="flex flex-row items-center justify-between">
+
+            <span>
+                <label for=""></label>
+                <app-custom-select [options]="sortOptions" [selectedOption]="sortBy"></app-custom-select>
+            </span>
+        </div>
+        <ul>
+
+        </ul>
+    </div>
 </main>
