🧹 lint: removal of biome and configuration of eslint and prettier

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,7 +30,7 @@
         <button class="flex flex-row items-center justify-end pl-2 gap-2 bg-secondary-container h-10 rounded-full"
             type="button" [matMenuTriggerFor]="menu">
             <mat-icon>keyboard_arrow_down</mat-icon>
-            <img class="rounded-full w-10 h-10" src="https://github.com/theduardomaciel.png" />
+            <img class="rounded-full w-10 h-10" src="https://github.com/theduardomaciel.png" alt="User profile picture" />
         </button>
         <mat-menu #menu="matMenu" xPosition="before" class="mt-2">
             <button disabled disabledInteractive mat-menu-item (click)="openWarning()">
