--- a/src/app/components/custom-select/custom-select.component.html
+++ b/src/app/components/custom-select/custom-select.component.html
@@ -1,41 +1,67 @@
-<div class="relative inline-block w-full" (click)="toggleDropdown()" role="combobox" aria-haspopup="listbox">
-    <!-- Trigger -->
-    <div matRipple tabindex="0" aria-controls="options-list"
-        class="flex items-center justify-between bg-secondary-container border-none text-on-secondary-container text-sm rounded-full px-4 py-2 cursor-pointer">
-        <!-- Trigger Content -->
-        <ng-container *ngIf="selectedOption; else placeholder">
-            <div class="flex items-center space-x-2">
-                <mat-icon inline>{{ selectedOption.icon }}</mat-icon>
-                <span>{{ selectedOption.label }}</span>
-            </div>
-        </ng-container>
-        <ng-template #placeholder>
-            <span>Select an option</span>
-        </ng-template>
-        <mat-icon class="ml-2">arrow_drop_down</mat-icon>
-    </div>
-    <!-- Dropdown -->
-    <ul #dropdown *ngIf="dropdownOpen" id="options-list" role="listbox"
-        [attr.data-state]="dropdownOpen ? 'open' : 'closed'" [attr.data-side]="dropdownSide"
-        class="absolute mt-2 w-full bg-surface-container border border-none rounded-lg overflow-hidden shadow-lg z-10 max-h-60 overflow-y-auto data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
-        (scroll)="onDropdownScroll($event)">
-        <!-- Dropdown options -->
-        @if (showTopShadow) {
-        <div
-            class="sticky top-0 left-0 w-full h-8 pointer-events-none select-none bg-gradient-to-b from-surface-container to-transparent z-20">
-        </div>
-        }
-        <li matRipple *ngFor="let option of options; let i = index" (click)="selectOption(option)" role="option"
-            [attr.aria-selected]="highlightedIndex === i" [ngClass]="{
-                'bg-secondary-container': highlightedIndex === i,
-            }" class="flex items-center space-x-2 px-4 py-3 hover:bg-secondary-container cursor-pointer">
-            <mat-icon inline>{{ option.icon }}</mat-icon>
-            <span>{{ option.label }}</span>
-        </li>
-        @if (showBottomShadow) {
-        <div
-            class="sticky bottom-0 left-0 w-full h-8 pointer-events-none select-none bg-gradient-to-t from-surface-container to-transparent z-20">
-        </div>
-        }
-    </ul>
-</div>
+<button
+	class="relative inline-block w-full"
+	(click)="toggleDropdown()"
+	(keypress)="toggleDropdown()"
+	role="combobox"
+	aria-controls="options-list"
+	aria-expanded="false"
+>
+	<!-- Trigger -->
+	<div
+		matRipple
+		tabindex="0"
+		aria-controls="options-list"
+		class="flex items-center justify-between bg-secondary-container border-none text-on-secondary-container text-sm rounded-full px-4 py-2 cursor-pointer"
+	>
+		<!-- Trigger Content -->
+		<ng-container *ngIf="selectedOption; else placeholder">
+			<div class="flex items-center space-x-2">
+				<mat-icon inline>{{ selectedOption.icon }}</mat-icon>
+				<span>{{ selectedOption.label }}</span>
+			</div>
+		</ng-container>
+		<ng-template #placeholder>
+			<span>Select an option</span>
+		</ng-template>
+		<mat-icon class="ml-2">arrow_drop_down</mat-icon>
+	</div>
+	<!-- Dropdown -->
+	<ul
+		#dropdown
+		*ngIf="dropdownOpen"
+		id="options-list"
+		role="listbox"
+		[attr.data-state]="dropdownOpen ? 'open' : 'closed'"
+		[attr.data-side]="dropdownSide"
+		class="absolute mt-2 w-full bg-surface-container border border-none rounded-lg overflow-hidden shadow-lg z-10 max-h-60 overflow-y-auto data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
+		(scroll)="onDropdownScroll($event)"
+	>
+		<!-- Dropdown options -->
+		@if (showTopShadow) {
+			<div
+				class="sticky top-0 left-0 w-full h-8 pointer-events-none select-none bg-gradient-to-b from-surface-container to-transparent z-20"
+			></div>
+		}
+		<li
+			matRipple
+			*ngFor="let option of options; let i = index"
+			(click)="selectOption(option)"
+			(keypress)="selectOption(option)"
+			role="option"
+			tabindex="0"
+			[attr.aria-selected]="highlightedIndex === i"
+			[ngClass]="{
+				'bg-secondary-container': highlightedIndex === i,
+			}"
+			class="flex items-center space-x-2 px-4 py-3 hover:bg-secondary-container cursor-pointer"
+		>
+			<mat-icon inline>{{ option.icon }}</mat-icon>
+			<span>{{ option.label }}</span>
+		</li>
+		@if (showBottomShadow) {
+			<div
+				class="sticky bottom-0 left-0 w-full h-8 pointer-events-none select-none bg-gradient-to-t from-surface-container to-transparent z-20"
+			></div>
+		}
+	</ul>
+</button>
