--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,46 +1,74 @@
 <nav class="flex flex-row items-center justify-between w-full px-24 py-9">
-    <mat-icon svgIcon="logo" class="text-on-secondary-container" aria-hidden="false" aria-label="Site logo"></mat-icon>
-    <ul class="flex flex-row items-center justify-center gap-4">
-        <li>
-            <a mat-stroked-button [routerLink]="['/overview']" [routerLinkActiveOptions]="{exact: true}"
-                routerLinkActive="!bg-primary !text-on-primary !border-primary">Overview
-            </a>
-        </li>
-        <li>
-            <a mat-stroked-button [routerLink]="['/published']" [routerLinkActiveOptions]="{exact: true}"
-                routerLinkActive="!bg-primary !text-on-primary !border-primary">Published</a>
-        </li>
-        <li>
-            <a mat-stroked-button class="!pl-8">
-                <mat-icon>cloud_upload</mat-icon>
-                Upload
-            </a>
-        </li>
-    </ul>
+	<mat-icon
+		svgIcon="logo"
+		class="text-on-secondary-container"
+		aria-hidden="false"
+		aria-label="Site logo"
+	></mat-icon>
+	<ul class="flex flex-row items-center justify-center gap-4">
+		<li>
+			<a
+				mat-stroked-button
+				[routerLink]="['/overview']"
+				[routerLinkActiveOptions]="{ exact: true }"
+				routerLinkActive="!bg-primary !text-on-primary !border-primary"
+				>Overview
+			</a>
+		</li>
+		<li>
+			<a
+				mat-stroked-button
+				[routerLink]="['/published']"
+				[routerLinkActiveOptions]="{ exact: true }"
+				routerLinkActive="!bg-primary !text-on-primary !border-primary"
+				>Published</a
+			>
+		</li>
+		<li>
+			<a mat-stroked-button class="!pl-8">
+				<mat-icon>cloud_upload</mat-icon>
+				Upload
+			</a>
+		</li>
+	</ul>
 
-    <div class="flex flex-row items-center justify-end gap-4">
-        <button mat-ripple
-            class="flex items-center justify-center aspect-square rounded-full bg-secondary-container h-10 opacity-50"
-            (click)="openWarning()">
-            <span class="leading-none text-lg">
-                <mat-icon inline="true">notifications</mat-icon>
-            </span>
-        </button>
+	<div class="flex flex-row items-center justify-end gap-4">
+		<button
+			mat-ripple
+			class="flex items-center justify-center aspect-square rounded-full bg-secondary-container h-10 opacity-50"
+			(click)="openWarning()"
+		>
+			<span class="leading-none text-lg">
+				<mat-icon inline="true">notifications</mat-icon>
+			</span>
+		</button>
 
-        <button class="flex flex-row items-center justify-end pl-2 gap-2 bg-secondary-container h-10 rounded-full"
-            type="button" [matMenuTriggerFor]="menu">
-            <mat-icon>keyboard_arrow_down</mat-icon>
-            <img class="rounded-full w-10 h-10" src="https://github.com/theduardomaciel.png" alt="User profile picture" />
-        </button>
-        <mat-menu #menu="matMenu" xPosition="before" class="mt-2">
-            <button disabled disabledInteractive mat-menu-item (click)="openWarning()">
-                <mat-icon>settings</mat-icon>
-                <span>Settings</span>
-            </button>
-            <button mat-menu-item class="pr-12">
-                <mat-icon>logout</mat-icon>
-                <span>Sign-out</span>
-            </button>
-        </mat-menu>
-    </div>
+		<button
+			class="flex flex-row items-center justify-end pl-2 gap-2 bg-secondary-container h-10 rounded-full"
+			type="button"
+			[matMenuTriggerFor]="menu"
+		>
+			<mat-icon>keyboard_arrow_down</mat-icon>
+			<img
+				class="rounded-full w-10 h-10"
+				src="https://github.com/theduardomaciel.png"
+				alt="User profile picture"
+			/>
+		</button>
+		<mat-menu #menu="matMenu" xPosition="before" class="mt-2">
+			<button
+				disabled
+				disabledInteractive
+				mat-menu-item
+				(click)="openWarning()"
+			>
+				<mat-icon>settings</mat-icon>
+				<span>Settings</span>
+			</button>
+			<button mat-menu-item class="pr-12">
+				<mat-icon>logout</mat-icon>
+				<span>Sign-out</span>
+			</button>
+		</mat-menu>
+	</div>
 </nav>
