--- a/src/app/published/published.component.html
+++ b/src/app/published/published.component.html
@@ -1,16 +1,17 @@
-<main class="flex flex-col items-start justify-start w-full min-h-screen px-24 pt-9 pb-14 gap-16">
-    <div>
-
-    </div>
-    <div>
-        <div class="flex flex-row items-center justify-between">
-            <span>
-                <label for=""></label>
-                <app-custom-select [options]="sortOptions" [selectedOption]="sortBy"></app-custom-select>
-            </span>
-        </div>
-        <ul>
-
-        </ul>
-    </div>
+<main
+	class="flex flex-row items-start justify-center w-full min-h-screen px-24 pt-9 pb-14 gap-16"
+>
+	<app-filter-panel class="w-1/3 max-w-md"></app-filter-panel>
+	<div class="flex flex-col items-start justify-start gap-9 w-full">
+		<div class="flex flex-row items-center justify-between">
+			<span>
+				<label for=""></label>
+				<app-custom-select
+					[options]="sortOptions"
+					[selectedOption]="sortBy"
+				></app-custom-select>
+			</span>
+		</div>
+		<ul class="flex flex-col items-start justify-start"></ul>
+	</div>
 </main>
