--- a/src/app/components/custom-select/custom-select.component.html
+++ b/src/app/components/custom-select/custom-select.component.html
@@ -53,7 +53,7 @@
 			[ngClass]="{
 				'bg-secondary-container': highlightedIndex === i,
 			}"
-			class="flex items-center space-x-2 px-4 py-3 hover:bg-secondary-container cursor-pointer"
+			class="flex items-center space-x-2 px-4 py-3 hover:bg-secondary-container text-left line-clamp-1 cursor-pointer"
 		>
 			<mat-icon inline>{{ option.icon }}</mat-icon>
 			<span>{{ option.label }}</span>
