--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,31 +3,45 @@
 @use "@angular/material" as mat;
 @use "./styles/_theme-colors.scss" as theme-colors;
 
+@include mat.core();
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+$angular-material-theme: mat.define-theme(
+	(
+		color: (
+			theme-type: light,
+			primary: theme-colors.$primary-palette,
+			tertiary: theme-colors.$tertiary-palette,
+		),
+		typography: (
+			use-system-variables: true,
+		),
+		density: (
+			scale: 0,
+		),
+	)
+);
+
 html {
-  @include mat.theme((color: (theme-type: light,
-        primary: theme-colors.$primary-palette,
-        tertiary: theme-colors.$tertiary-palette,
-      ),
-      typography: Roboto,
-      density: 0,
-    ));
+	@include mat.theme($angular-material-theme);
+	/* @include mat.typography-hierarchy($angular-material-theme);
+	@include mat.system-level-typography($angular-material-theme); */
 }
 
 html,
 body {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 body {
-  background: var(--mat-sys-surface);
-  color: var(--mat-sys-on-surface);
+	background: var(--mat-sys-background);
+	color: var(--mat-sys-on-surface);
 }
