✨ feat: added community label to header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,20 @@
 <nav class="flex flex-row items-center justify-between w-full px-24 py-9">
-	<mat-icon
-		svgIcon="logo"
-		class="text-on-secondary-container"
-		aria-hidden="false"
-		aria-label="Site logo"
-	></mat-icon>
+	<div
+		class="flex flex-row items-center justify-start gap-4 text-on-secondary-container"
+	>
+		<mat-icon
+			svgIcon="logo"
+			aria-hidden="false"
+			aria-label="Site logo"
+		></mat-icon>
+		<mat-icon
+			svgIcon="label"
+			inline
+			class="select-none pointer-events-none !w-[110px] !h-[13px]"
+			aria-hidden="false"
+			aria-label="Site label"
+		></mat-icon>
+	</div>
 	<ul class="flex flex-row items-center justify-center gap-4">
 		<li>
 			<a
