--- a/src/app/published/published.component.html
+++ b/src/app/published/published.component.html
@@ -1,77 +1,129 @@
 <main
 	class="flex flex-row items-start justify-center w-full min-h-screen px-24 pt-9 pb-14 gap-16"
 >
-	<app-filter-panel class="w-1/3 max-w-md"></app-filter-panel>
-	<div class="flex flex-col items-start justify-start gap-9 w-full">
-		<div class="flex flex-row items-center justify-start w-full gap-4">
-			<div class="flex flex-1 relative">
-				<span class="text-xl">
-					<mat-icon
-						inline
-						class="text-on-surface-variant absolute top-1/2 -translate-y-1/2 left-6"
-						>search</mat-icon
-					>
-				</span>
-				<input
-					class="pr-6 pl-[3.75rem] py-3 bg-surface-container-high text-on-surface-variant rounded-full w-full"
-					type="text"
-					placeholder="Search for charts, tourpasses and themes..."
-				/>
-			</div>
-			<span class="flex flex-row items-center justify-end gap-4 h-full">
-				<label class="min-w-fit" for="sort-by">Sort by</label>
-				<app-custom-select
-					class="h-full"
-					id="sort-by"
-					[options]="sortOptions"
-					[selectedOption]="sortBy"
-				></app-custom-select>
-			</span>
-		</div>
-		@if (charts.length > 0) {
-			<ul class="flex flex-col items-start justify-start w-full">
-				<app-list-section class="w-full" title="June 2024">
-					@for (chart of charts; track $index) {
-						<app-chart
-							[name]="chart.name"
-							[artist]="chart.artist"
-							[coverUrl]="chart.coverUrl"
-							[duration]="chart.duration"
-							[notesAmount]="chart.notesAmount"
-							[difficulty]="chart.difficulty"
-							[isDeluxe]="chart.isDeluxe"
-							[ranking]="chart.ranking"
-							[tendency]="chart.tendency"
-						></app-chart>
-					}
-				</app-list-section>
-			</ul>
-		} @else {
+	@if (!filters.length && !charts.length) {
+		<div class="flex flex-col items-center justify-start gap-6 w-full">
 			<div
 				class="flex flex-col items-center justify-center gap-6 bg-surface-container-low rounded-2xl p-9 w-full"
 			>
 				<div class="flex flex-col items-center justify-center gap-4">
 					<span class="text-6xl"
-						><mat-icon inline
-							>sentiment_dissatisfied</mat-icon
-						></span
+						><mat-icon inline>file_copy_off</mat-icon></span
 					>
-					<h1>We couldn't find anything based on your search</h1>
-					<p class="max-w-[50%] text-center">
-						Try removing some filters or searching for something
-						else
+					<h1 class="text-2xl">
+						It looks like you haven't published anything yet
+					</h1>
+					<p class="max-w-[65%] text-center">
+						Create a chart, tourpass or theme and showcase them to
+						the community when you’re ready!
 					</p>
 				</div>
-				<button
-					class="!flex-row-reverse"
-					mat-stroked-button
-					(click)="clearFilters()"
-					(keypress)="clearFilters()"
-				>
-					<p>Clear filters</p>
-					<mat-icon class="!mr-0 !ml-2">cancel</mat-icon>
+			</div>
+			<div
+				class="flex flex-row items-center justify-between gap-6 bg-surface-container-low rounded-2xl px-9 py-4 w-full"
+			>
+				<div class="flex flex-row items-center justify-start gap-6">
+					<mat-icon class="min-w-6"> help </mat-icon>
+					<div class="flex flex-col items-start justify-start">
+						<p>Don’t know where to start?</p>
+						<p>
+							Meet the community on Discord and stay up to date
+							with everything you need to know to have fun
+							creating your own content!
+						</p>
+					</div>
+				</div>
+				<button class="!min-w-fit" mat-flat-button>
+					<mat-icon
+						class="min-w-5"
+						svgIcon="discord"
+						inline="true"
+						aria-hidden="false"
+						aria-label="Discord logo"
+					></mat-icon>
+					Discord
 				</button>
 			</div>
-		}
-	</div>
+		</div>
+	} @else {
+		<app-filter-panel class="w-1/3 max-w-md"></app-filter-panel>
+		<div class="flex flex-col items-start justify-start gap-9 w-full">
+			<div class="flex flex-row items-center justify-start w-full gap-4">
+				<div class="flex flex-1 relative">
+					<span class="text-xl">
+						<mat-icon
+							inline
+							class="text-on-surface-variant absolute top-1/2 -translate-y-1/2 left-6"
+							>search</mat-icon
+						>
+					</span>
+					<input
+						class="pr-6 pl-[3.75rem] py-3 bg-surface-container-high text-on-surface-variant rounded-full w-full"
+						type="text"
+						placeholder="Search for charts, tourpasses and themes..."
+					/>
+				</div>
+				<span
+					class="flex flex-row items-center justify-end gap-4 h-full"
+				>
+					<label class="min-w-fit" for="sort-by">Sort by</label>
+					<app-custom-select
+						class="h-full"
+						id="sort-by"
+						[options]="sortOptions"
+						[selectedOption]="sortBy"
+					></app-custom-select>
+				</span>
+			</div>
+			@if (charts.length > 0) {
+				<ul class="flex flex-col items-start justify-start w-full">
+					<app-list-section class="w-full" title="June 2024">
+						@for (chart of charts; track $index) {
+							<app-chart
+								[name]="chart.name"
+								[artist]="chart.artist"
+								[coverUrl]="chart.coverUrl"
+								[duration]="chart.duration"
+								[notesAmount]="chart.notesAmount"
+								[difficulty]="chart.difficulty"
+								[isDeluxe]="chart.isDeluxe"
+								[ranking]="chart.ranking"
+								[tendency]="chart.tendency"
+							></app-chart>
+						}
+					</app-list-section>
+				</ul>
+			} @else {
+				<div
+					class="flex flex-col items-center justify-center gap-6 bg-surface-container-low rounded-2xl p-9 w-full"
+				>
+					<div
+						class="flex flex-col items-center justify-center gap-4"
+					>
+						<span class="text-6xl"
+							><mat-icon inline
+								>sentiment_dissatisfied</mat-icon
+							></span
+						>
+						<h1 class="text-2xl">
+							We couldn't find anything based on your search
+						</h1>
+						<p class="max-w-[50%] text-center">
+							Try removing some filters or searching for something
+							else
+						</p>
+					</div>
+					<button
+						class="!flex-row-reverse"
+						mat-stroked-button
+						(click)="clearFilters()"
+						(keypress)="clearFilters()"
+					>
+						<p>Clear filters</p>
+						<mat-icon class="!mr-0 !ml-2">cancel</mat-icon>
+					</button>
+				</div>
+			}
+		</div>
+	}
 </main>
