--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -165,6 +165,8 @@
 				[columns]="versionsColumns"
 				[data]="versionsData"
 				[actions]="versionsActions"
+				initialSortColumn="id"
+				initialSortDirection="desc"
 			></app-table>
 			<span class="flex items-center justify-end w-full">
 				<button mat-stroked-button>
