--- a/src/app/routes/chart/subcomponents/table/table.component.html
+++ b/src/app/routes/chart/subcomponents/table/table.component.html
@@ -1,11 +1,22 @@
 <div class="rounded-lg border border-inverse-on-surface overflow-hidden">
-	<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+	<table
+		mat-table
+		[dataSource]="dataSource"
+		matSort
+		[matSortActive]="initialSortColumn"
+		[matSortDirection]="initialSortDirection"
+		class="mat-elevation-z8"
+	>
 		@for (column of columns; track $index) {
 			<ng-container [matColumnDef]="column.columnDef">
-				<th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
-				<td mat-cell *matCellDef="let element">
-					{{ column.cell(element) }}
-				</td>
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>
+					{{ column.header }}
+				</th>
+				<td
+					mat-cell
+					*matCellDef="let element"
+					[innerHTML]="column.cell(element) | safeHtml"
+				></td>
 			</ng-container>
 		}
 
@@ -18,13 +29,16 @@
 					>
 						@for (action of actions; track $index) {
 							<button
+								[matRippleDisabled]="action.disabled(element)"
+								[disabled]="action.disabled(element)"
+								[matTooltipDisabled]="action.disabled(element)"
 								mat-ripple
 								matTooltip="{{ action.description }}"
 								matTooltipPosition="above"
 								matTooltipShowDelay="375"
 								matTooltipClass="!text-sm"
 								(click)="action.callback(element)"
-								class="flex flex-row items-center justify-center rounded-lg p-2.5 bg-secondary-container hover:brightness-90"
+								class="flex flex-row items-center justify-center rounded-lg p-2.5 bg-secondary-container hover:brightness-90 disabled:opacity-50"
 							>
 								<span
 									class="text-base align-middle leading-none"
