--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -80,6 +80,7 @@
 					<app-list-section class="w-full" title="June 2024">
 						@for (chart of charts; track $index) {
 							<app-chart
+								routerLink="/chart"
 								[name]="chart.name"
 								[artist]="chart.artist"
 								[coverUrl]="chart.coverUrl"
