🎨 fix: header mobile support

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer
-	class="flex flex-col items-center justify-start px-24 py-9 gap-4 w-full bg-surface-container-low text-sm"
+	class="flex flex-col items-center justify-start px-wrapper py-9 gap-4 w-full bg-surface-container-low text-sm"
 >
 	<div class="flex flex-row items-start justify-between w-full">
 		<!-- Left Column -->
