--- a/src/app/routes/chart/subcomponents/table/table.component.html
+++ b/src/app/routes/chart/subcomponents/table/table.component.html
@@ -3,6 +3,7 @@
 		mat-table
 		[dataSource]="dataSource"
 		matSort
+		[matSortDisabled]="!hasSorting.length"
 		[matSortActive]="initialSortColumn"
 		[matSortDirection]="initialSortDirection"
 		class="mat-elevation-z8"
