--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,97 @@
-<nav class="flex flex-row items-center justify-between w-full px-24 py-9">
-	<div
-		class="flex flex-row items-center justify-start gap-4 text-on-secondary-container"
-	>
-		<mat-icon
-			svgIcon="logo"
-			aria-hidden="false"
-			aria-label="Site logo"
-		></mat-icon>
-		<mat-icon
-			svgIcon="label"
-			inline
-			class="select-none pointer-events-none !w-[110px] !h-[13px]"
-			aria-hidden="false"
-			aria-label="Site label"
-		></mat-icon>
+<nav
+	class="flex flex-col md:flex-row items-start md:items-center justify-center w-full gap-6 max-md:bg-surface-container border-b-outline-variant max-md:border-b py-9"
+>
+	<div class="flex flex-row items-center justify-between w-full px-wrapper">
+		<div
+			class="flex flex-row items-center justify-start gap-2 md:gap-4 text-on-secondary-container"
+		>
+			<mat-icon
+				svgIcon="logo"
+				aria-hidden="false"
+				aria-label="Site logo"
+			></mat-icon>
+			<mat-icon
+				svgIcon="label"
+				inline
+				class="select-none pointer-events-none !w-[110px] !h-[13px]"
+				aria-hidden="false"
+				aria-label="Site label"
+			></mat-icon>
+		</div>
+
+		<ul class="hidden flex-row items-center justify-center gap-4 md:flex">
+			<li>
+				<a
+					mat-stroked-button
+					[routerLink]="['/overview']"
+					[routerLinkActiveOptions]="{ exact: true }"
+					routerLinkActive="!bg-primary !text-on-primary !border-primary"
+					>Overview
+				</a>
+			</li>
+			<li>
+				<a
+					mat-stroked-button
+					[routerLink]="['/published']"
+					[routerLinkActiveOptions]="{ exact: true }"
+					routerLinkActive="!bg-primary !text-on-primary !border-primary"
+					>Published</a
+				>
+			</li>
+			<li>
+				<a mat-stroked-button class="!pl-8">
+					<mat-icon>cloud_upload</mat-icon>
+					Upload
+				</a>
+			</li>
+		</ul>
+
+		<div class="flex flex-row items-center justify-end gap-2 md:gap-4">
+			<button
+				mat-ripple
+				class="flex items-center justify-center aspect-square rounded-full bg-secondary-container h-10 opacity-50"
+				(click)="openWarning()"
+			>
+				<span class="leading-none text-md">
+					<mat-icon inline="true">notifications</mat-icon>
+				</span>
+			</button>
+
+			<button
+				class="flex flex-row items-center justify-end pl-2 gap-2 bg-secondary-container h-10 rounded-full"
+				type="button"
+				[matMenuTriggerFor]="menu"
+			>
+				<mat-icon>keyboard_arrow_down</mat-icon>
+				<img
+					class="rounded-full w-10 h-10"
+					src="https://github.com/theduardomaciel.png"
+					alt="User profile picture"
+				/>
+			</button>
+			<mat-menu #menu="matMenu" xPosition="before" class="mt-2">
+				<button
+					disabled
+					disabledInteractive
+					mat-menu-item
+					(click)="openWarning()"
+				>
+					<mat-icon>settings</mat-icon>
+					<span>Settings</span>
+				</button>
+				<button mat-menu-item class="pr-12">
+					<mat-icon>logout</mat-icon>
+					<span>Sign-out</span>
+				</button>
+			</mat-menu>
+		</div>
 	</div>
-	<ul class="flex flex-row items-center justify-center gap-4">
-		<li>
+	<ul
+		class="flex flex-row items-center justify-center max-md:justify-start gap-2 md:hidden overflow-x-scroll w-full overflow-y-hidden pl-wrapper hide-scrollbar"
+	>
+		<li class="w-full">
 			<a
+				class="!w-full"
 				mat-stroked-button
 				[routerLink]="['/overview']"
 				[routerLinkActiveOptions]="{ exact: true }"
@@ -25,8 +99,9 @@
 				>Overview
 			</a>
 		</li>
-		<li>
+		<li class="w-full">
 			<a
+				class="!w-full"
 				mat-stroked-button
 				[routerLink]="['/published']"
 				[routerLinkActiveOptions]="{ exact: true }"
@@ -34,51 +109,10 @@
 				>Published</a
 			>
 		</li>
-		<li>
-			<a mat-stroked-button class="!pl-8">
-				<mat-icon>cloud_upload</mat-icon>
-				Upload
+		<li class="mr-wrapper">
+			<a mat-flat-button class="!p-0">
+				<mat-icon class="!p-0 !m-0">cloud_upload</mat-icon>
 			</a>
 		</li>
 	</ul>
-
-	<div class="flex flex-row items-center justify-end gap-4">
-		<button
-			mat-ripple
-			class="flex items-center justify-center aspect-square rounded-full bg-secondary-container h-10 opacity-50"
-			(click)="openWarning()"
-		>
-			<span class="leading-none text-lg">
-				<mat-icon inline="true">notifications</mat-icon>
-			</span>
-		</button>
-
-		<button
-			class="flex flex-row items-center justify-end pl-2 gap-2 bg-secondary-container h-10 rounded-full"
-			type="button"
-			[matMenuTriggerFor]="menu"
-		>
-			<mat-icon>keyboard_arrow_down</mat-icon>
-			<img
-				class="rounded-full w-10 h-10"
-				src="https://github.com/theduardomaciel.png"
-				alt="User profile picture"
-			/>
-		</button>
-		<mat-menu #menu="matMenu" xPosition="before" class="mt-2">
-			<button
-				disabled
-				disabledInteractive
-				mat-menu-item
-				(click)="openWarning()"
-			>
-				<mat-icon>settings</mat-icon>
-				<span>Settings</span>
-			</button>
-			<button mat-menu-item class="pr-12">
-				<mat-icon>logout</mat-icon>
-				<span>Sign-out</span>
-			</button>
-		</mat-menu>
-	</div>
 </nav>
