--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -1,5 +1,5 @@
 <main
-	class="flex flex-row items-start justify-center w-full min-h-screen px-24 pt-9 pb-14 gap-16"
+	class="flex flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-16"
 >
 	@if (!filters.length && !charts.length) {
 		<div class="flex flex-col items-center justify-start gap-6 w-full">
