--- a/src/app/routes/overview/overview.component.html
+++ b/src/app/routes/overview/overview.component.html
@@ -1,10 +1,10 @@
 <main
-	class="flex flex-col items-center justify-center gap-9 w-full min-h-[calc(100vh-7rem)]"
+	class="flex flex-col items-center justify-center gap-9 w-full min-h-[calc(100vh-7rem)] px-wrapper"
 >
 	<h1 class="font-bold text-4xl">Work in progress!</h1>
 	<p>This page still needs some work. Please check back later.</p>
 	<span class="flex flex-row items-center justify-center gap-2">
-		<mat-icon class="text-on-primary-container">code</mat-icon>
+		<mat-icon class="text-on-primary-container min-w-6">code</mat-icon>
 		<p>
 			You can
 			<a
