--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -1,5 +1,5 @@
 <main
-	class="flex flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-16"
+	class="flex flex-col md:flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-9 md:gap-16"
 >
 	@if (!filters.length && !charts.length) {
 		<div class="flex flex-col items-center justify-start gap-6 w-full">
@@ -46,10 +46,14 @@
 			</div>
 		</div>
 	} @else {
-		<app-filter-panel class="w-1/3 max-w-md"></app-filter-panel>
+		<app-filter-panel
+			class="w-full md:w-1/3 md:max-w-md"
+		></app-filter-panel>
 		<div class="flex flex-col items-start justify-start gap-9 w-full">
-			<div class="flex flex-row items-center justify-start w-full gap-4">
-				<div class="flex flex-1 relative">
+			<div
+				class="flex flex-col md:flex-row items-center justify-start w-full gap-4"
+			>
+				<div class="max-md:w-full md:flex md:flex-1 relative">
 					<span class="text-xl">
 						<mat-icon
 							inline
